[gd_scene load_steps=13 format=3 uid="uid://imnb2aofxj77"]

[ext_resource type="Texture2D" uid="uid://ocq6y8sl8sjw" path="res://assets/objects/bomb.png" id="1_d4fy3"]
[ext_resource type="Script" path="res://entities/interactable/bomb/bomb.gd" id="1_v5v30"]
[ext_resource type="AudioStream" uid="uid://bew4ovcpiwk0b" path="res://assets/audio/sfx/explosion.mp3" id="3_l7why"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wwoma"]
size = Vector2(42, 42)

[sub_resource type="Animation" id="Animation_sfdb2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1v8x3"]
resource_name = "explode"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(2.25, 2.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6j0lb"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_61o6y"]
_data = {
"RESET": SubResource("Animation_sfdb2"),
"explode": SubResource("Animation_1v8x3"),
"idle": SubResource("Animation_6j0lb")
}

[sub_resource type="Animation" id="Animation_6k8qg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.160784, 0.203922, 0)]
}

[sub_resource type="Animation" id="Animation_os2wu"]
resource_name = "explosionBlink"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5, 0.6, 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.160784, 0.203922, 0), Color(0.977031, 0.161905, 0.20056, 0.111485), Color(1, 0.92549, 0.913725, 0.223529), Color(0.931092, 0.164146, 0.193838, 0.334454), Color(1, 1, 1, 0.372549), Color(0.908123, 0.165266, 0.190476, 0.445938), Color(0.885154, 0.166387, 0.187115, 0.557423), Color(1, 1, 1, 0.611765), Color(0.862185, 0.167507, 0.183754, 0.668908), Color(1, 1, 1, 0.72549), Color(0.839216, 0.168627, 0.180392, 0.780392), Color(1, 1, 1, 0.780392)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5iso4"]
_data = {
"RESET": SubResource("Animation_6k8qg"),
"explosionBlink": SubResource("Animation_os2wu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44q5w"]
size = Vector2(28, 28)

[node name="Bomb" type="StaticBody2D" groups=["bomb"]]
script = ExtResource("1_v5v30")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_d4fy3")
hframes = 5

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -18.0
offset_top = -17.3333
offset_right = 22.0
offset_bottom = 22.6667
color = Color(1, 0.160784, 0.203922, 0)

[node name="ExplosionArea" type="Area2D" parent="." groups=["bomb"]]
collision_layer = 4
collision_mask = 2

[node name="ExplosionColShape" type="CollisionShape2D" parent="ExplosionArea" groups=["bomb"]]
shape = SubResource("RectangleShape2D_wwoma")
debug_color = Color(0.92549, 0, 0.294118, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_61o6y")
}
autoplay = "idle"
speed_scale = 1.5

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5iso4")
}
autoplay = "RESET"

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("3_l7why")
volume_db = -8.098

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["bomb"]]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_44q5w")

[node name="playerBodyCollision" type="Area2D" parent="." groups=["bomb"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="playerBodyCollision" groups=["bomb"]]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_44q5w")

[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="playerBodyCollision" to="." method="_on_player_body_collision_body_entered"]
[connection signal="body_exited" from="playerBodyCollision" to="." method="_on_player_body_collision_body_exited"]
